--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,26 @@
 language: python
 sudo: required
-
 python:
-  - 2.7
-  - 3.4
-
+- 2.7
+- 3.4
 before_install:
-  - sudo apt-add-repository ppa:beineri/opt-qt551 -y
-  - sudo apt-get update
-  - sudo apt-get install qt-latest
-  - source /opt/qt55/bin/qt55-env.sh
-
+- sudo apt-add-repository ppa:beineri/opt-qt551 -y
+- sudo apt-get update
+- sudo apt-get install qt-latest
+- source /opt/qt55/bin/qt55-env.sh
 install:
-  - sudo mkdir -p /builds && sudo chmod a+rw /builds
-  - sudo mkdir -p /downloads && sudo chmod a+rw /downloads
-  - curl -L -o /downloads/sip.tar.gz http://sourceforge.net/projects/pyqt/files/sip/sip-4.17/sip-4.17.tar.gz
-  - curl -L -o /downloads/pyqt.tar.gz http://skylink.dl.sourceforge.net/project/pyqt/PyQt5/PyQt-5.5.1/PyQt-gpl-5.5.1.tar.gz
-  - tar xzf /downloads/sip.tar.gz -C /builds --keep-newer-files
-  - tar xzf /downloads/pyqt.tar.gz -C /builds --keep-newer-files
-  - cd /builds/sip-4.17 && python configure.py && sudo make && sudo make install
-  - cd /builds/PyQt-gpl-5.5.1 && python configure.py --confirm-license && sudo make && sudo make install
+- sudo mkdir -p /builds && sudo chmod a+rw /builds
+- sudo mkdir -p /downloads && sudo chmod a+rw /downloads
+- curl -L -o /downloads/sip.tar.gz http://sourceforge.net/projects/pyqt/files/sip/sip-4.17/sip-4.17.tar.gz
+- curl -L -o /downloads/pyqt.tar.gz http://skylink.dl.sourceforge.net/project/pyqt/PyQt5/PyQt-5.5.1/PyQt-gpl-5.5.1.tar.gz
+- tar xzf /downloads/sip.tar.gz -C /builds --keep-newer-files
+- tar xzf /downloads/pyqt.tar.gz -C /builds --keep-newer-files
+- cd /builds/sip-4.17 && python configure.py && sudo make && sudo make install
+- cd /builds/PyQt-gpl-5.5.1 && python configure.py --confirm-license && sudo make
+  && sudo make install
+deploy:
+  provider: releases
+  api_key: b819def3529970ff742cdf2e463d80c71e549ce0
+  file: qsd
+  on:
+    repo: reno-/pyqt5-CI
