--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,34 @@
-language: python
+language: erlang
 sudo: required
-python:
-- 2.7
-- 3.4
-before_install:
-- sudo apt-add-repository ppa:beineri/opt-qt551 -y
-- sudo apt-get update
-- sudo apt-get install qt-latest
-- source /opt/qt55/bin/qt55-env.sh
+dist: trusty
+
+virtualenv:
+  system_site_packages: true
+
 install:
-- sudo mkdir -p /builds && sudo chmod a+rw /builds
-- sudo mkdir -p /downloads && sudo chmod a+rw /downloads
-- curl -L -o /downloads/sip.tar.gz http://sourceforge.net/projects/pyqt/files/sip/sip-4.17/sip-4.17.tar.gz
-- curl -L -o /downloads/pyqt.tar.gz http://skylink.dl.sourceforge.net/project/pyqt/PyQt5/PyQt-5.5.1/PyQt-gpl-5.5.1.tar.gz
-- tar xzf /downloads/sip.tar.gz -C /builds --keep-newer-files
-- tar xzf /downloads/pyqt.tar.gz -C /builds --keep-newer-files
-- cd /builds/sip-4.17 && python configure.py && sudo make && sudo make install
-- cd /builds/PyQt-gpl-5.5.1 && python configure.py --confirm-license && sudo make
-  && sudo make install
+ - sudo apt-get update
+ - sudo apt-get -y install python3-pyqt5 python3-setuptools libpython3.4-dev 
+ - sudo easy_install3 pip
+ - sudo pip3 install pyinstaller
+
+script: 
+ - cd src
+ - WHOLE_SLUG=${TRAVIS_REPO_SLUG}
+ - read OWNER REPO <<<$(IFS="/"; echo $WHOLE_SLUG)
+ - echo $REPO
+ - ../scripts/build.sh ${REPO}_${TRAVIS_TAG}
+ - cd dist 
+ - zip ${REPO}_${TRAVIS_TAG}_$TRAVIS_OS_NAME.zip ${REPO}_${TRAVIS_TAG}
+ - ls
+
 deploy:
   provider: releases
-  api_key: b819def3529970ff742cdf2e463d80c71e549ce0
-  file: qsd
+  skip_cleanup: true
+  api_key:
+    secure: "${SECURE_KEY}"
+  file:
+  - "${TRAVIS_BUILD_DIR}/${TRAVIS_REPO_SLUG}/src/dist/${REPO}_${TRAVIS_TAG}_${TRAVIS_OS_NAME}.zip"
   on:
-    repo: reno-/pyqt5-CI
+    tags: true
+    all_branches: true
+    repo: ${TRAVIS_REPO_SLUG}
