--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ before_install: scripts/install-deps.sh
 
 install: 
   - travis_wait scripts/install.sh
-  - source split_repo_slug.sh
+  - source scripts/split_repo_slug.sh
+  - ls
+  - ls -lisah scripts
   - echo "${REPO}"
 
 script: ls
