--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - travis_wait scripts/install.sh
   - source scripts/split_repo_slug.sh
 
-script: ls -lisah
+script: ls -lisah src
 
 deploy:
   provider: releases
@@ -23,7 +23,7 @@ deploy:
   api_key:
     secure: "${SECURE_KEY}"
   file:
-  - "${TRAVIS_BUILD_DIR}/src/dist/${REPO}_${TRAVIS_TAG}_${TRAVIS_OS_NAME}.zip"
+  - "src/dist/${REPO}_${TRAVIS_TAG}_${TRAVIS_OS_NAME}.zip"
   on:
     tags: true
     all_branches: true
